2009-10-23 Ian Rutt
 * libglide/glide_temp.F90: Pulled out basal hydrology into glide_bwat.F90
 * libglide/glide_temp.F90: Moved staggering and derivative calculations
   into subroutine. Removed geomderv from interface
 * Regtested against e2.a and e2.h

2009-10-22 Ian Rutt
 * libglide/glide_temp.F90: Created derived type for full temperature
   solution parameters. Began populating this. 
 * libglide/glide_temp.F90: began to separate out basal water
   model. Temporarily added utility module to resolve circular make
   dependencies. This will need refining.
 * Regtested against e2.a and e2.h
	
2009-10-21 Ian Rutt
 * libglide/glide_temp.F90: More refactoring progress. Preparation for
   variable time-step. Bug fixed: regtest passes (e2.a and e2.h)
 * libglide/glide_temp.F90: All tempwk arrays replaced by assumed-shape
   stack arrays in main call. Scalars from tempwk are either parameters
   (declared as such) or depend on the time-step, so must be in main call.
 * libglide/glide_temp.F90: Reduced derived types in interface.
 * Regtested against e2.a and e2.h
	
2009-10-20 Ian Rutt
 * libglide/glide_temp.F90: rationalised derived types in calcbmlt
   interface. Only uses tempwk and zCoord. Builds, but not regtested.

2009-10-15 Magnus Hagdorn
 * merged trunk r1321:1329 with ChangeLog changes below:

----------------------------------------------------------------------
2009-10-15 Magnus Hagdorn
 * libglide/Makefile.am: fix out-of-dir build bugs

2009-10-15 Magnus Hagdorn
 * example-drivers/EISMINT-3/EISMINT-3/EISMINT3GL.input.nc: make CF compliant
 * example-drivers/eis/fenscan/europe.20km.nc: ditto
 * tests/EISMINT/EISMINT-2/mound.nc: ditto
 * tests/EISMINT/EISMINT-2/trough.nc: ditto

2009-10-14 Magnus Hagdorn
 * libglide/glide_lithot_vars.def: new variable definition file for lithot
   variables
 * libglide/Makefile.am: add new file
 * libglide/glide.F90: optionally handle lithot I/O
 * libglide/glide_stop.F90: ditto